--- a/dashboard.html
+++ b/dashboard.html
@@ -1290,6 +1290,12 @@
             const modal = bootstrap.Modal.getInstance(document.getElementById('editMovieModal'));
             modal.hide();
         }
+        
+        // Function to handle logout
+        function handleLogout() {
+            // Redirect to index.html
+            window.location.href = 'login.html';
+        }
     </script>
 </body>
-</html> 
+</html>
